[package]
name = "scurvy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mac"
path = "src/bin/mac.rs"

[[bin]]
name = "ip"
path = "src/bin/ip.rs"

[[bin]]
name = "sn"
path = "src/bin/sn.rs"

[[bin]]
name = "gw"
path = "src/bin/gw.rs"

[[bin]]
name = "net"
path = "src/bin/net.rs"

[[bin]]
name = "dt"
path = "src/bin/dt.rs"

[[bin]]
name = "argh"
path = "src/bin/argh.rs"

[dependencies]
default-net = "0.21.0"
